[package]
name = "fusion-metadata"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["tonic-reflection", "tonic-web"]
tonic-reflection = ["dep:tonic-reflection", "ultimate-grpc/tonic-reflection"]
tonic-web = ["dep:tonic-web", "ultimate-grpc/tonic-web"]
opentelemetry = ["ultimate-core/opentelemetry"]

[[bin]]
name = "fusion-metadata"
path = "src/bin/fusion-metadata.rs"

[dependencies]
ultimate-core = { workspace = true }
# -- ultimates
ultimate-common = { workspace = true }
ultimate-api = { workspace = true }

# -- db
ultimate-db = { workspace = true, features = ["tonic"] }
sqlx = { workspace = true }
sea-query = { workspace = true }
sea-query-binder = { workspace = true }

# -- grpc
ultimate-grpc = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true, optional = true }
tonic-web = { workspace = true, optional = true }

# -- fusions
fusiondata = { workspace = true }
fusiondata-context = { workspace = true }

# -- async
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# -- tracing
tracing = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
