[package]
name = "fusiondata"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = []

[dependencies]
# ultimate-common = { workspace = true }
# -- mics
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true }
uuid = { workspace = true }
