[package]
name = "guixu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ultimate-common = { workspace = true }
ultimate-core = { workspace = true }
ultimate-web = { workspace = true }

uuid = { workspace = true }
rust_decimal = { workspace = true }

# -- db
ultimate-db = { workspace = true, features = ["with-postgres", "with-uuid"] }
modelsql = { workspace = true, features = [
  "with-postgres",
  "with-uuid",
  "with-rust_decimal",
  "with-pgvector",
  "with-ilike",
] }
sqlx = { workspace = true, features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "json",
  "chrono",
  "rust_decimal",
] }
sea-query = { workspace = true }
sea-query-binder = { workspace = true, features = [
  "sqlx-postgres",
  "postgres-array",
  "with-uuid",
  "with-json",
  "with-chrono",
  "with-rust_decimal",
] }

# -- tokio & async
tokio = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }

# -- tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }

# -- scheduler & cron
tokio-cron-scheduler = { workspace = true }
croner = { workspace = true }

# -- serde
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
