[package]
name = "hetuflow-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "hetuflow-agent"
path = "bin/hetuflow-agent.rs"

[dependencies]
hetuflow-core = { workspace = true }
ultimate-common = { workspace = true, features = ["with-uuid"] }
ultimate-core = { workspace = true, features = ["with-uuid"] }
ultimate-web = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
hierarchical_hash_wheel_timer = { workspace = true }
croner = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
logforth = { workspace = true }
uuid = { workspace = true }
rand = "0.8"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal"] }
