[package]
name = "hetuflow-bins"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "hetuflow-server"
path = "bin/hetuflow-server.rs"

[[bin]]
name = "hetuflow-agent"
path = "bin/hetuflow-agent.rs"

[dependencies]
fusion-corelib = { workspace = true }
fusion-common = { workspace = true, features = ["with-uuid"] }
fusion-core = { workspace = true, features = ["with-uuid"] }
hetuflow-core = { workspace = true }
hetuflow-agent = { path = "../hetuflow-agent" }
hetuflow-server = { path = "../hetuflow-server" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
config = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio-test = { workspace = true }
axum-test = { workspace = true }
fusion-db = { workspace = true }
modelsql = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
