[package]
name = "hetuflow-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = true

[lints]
workspace = true

[features]
with-db = ["fusionsql", "sqlx", "sea-query", "fusionsql-core/with-sea-query"]
with-cli = ["clap"]
with-openapi = [
  "utoipa",
  "fusion-common/with-openapi",
  "fusionsql/with-openapi",
  "fusionsql-core/with-openapi",
]
# WASM compatibility features
with-wasm = [
  "fusion-common/with-wasm",
  "tsify",
  "uuid/js",
  "wasm-bindgen",
  "js-sys",
  "gloo-timers",
  "web-sys",
]

[dependencies]
fusion-common = { workspace = true, features = ["with-uuid"] }
hierarchical_hash_wheel_timer = { workspace = true }
croner = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true }
log = { workspace = true }
fusionsql = { workspace = true, optional = true, features = [
  "with-uuid",
  "with-postgres",
] }
fusionsql-core = { workspace = true, features = ["with-uuid"] }
sqlx = { workspace = true, optional = true }
sea-query = { workspace = true, optional = true }
clap = { workspace = true, optional = true, features = ["derive", "string"] }
typed-builder = { workspace = true }
garde = { workspace = true }
duration-str = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
utoipa = { workspace = true, optional = true }

# WASM dependencies
wasm-bindgen = { version = "0.2", features = [
  "serde-serialize",
], optional = true }
js-sys = { version = "0.3", optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
web-sys = { version = "0.3", optional = true }
tsify = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
