[package]
name = "hetuflow-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = true

[lints]
workspace = true

[features]
with-db = [
  "fusionsql",
  "sqlx",
  "sqlx/postgres",
  "sea-query",
  "fusionsql-core/with-sea-query",
]
with-cli = ["clap"]
with-openapi = [
  "utoipa",
  "fusion-common/with-openapi",
  "fusionsql/with-openapi",
  "fusionsql-core/with-openapi",
]
# WASM compatibility features
with-wasm = ["fusion-common/with-wasm", "uuid/js"]

[dependencies]
fusion-common = { workspace = true, features = ["with-uuid"] }
hierarchical_hash_wheel_timer = { workspace = true }
croner = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true }
log = { workspace = true }
fusionsql = { workspace = true, optional = true, features = [
  "with-uuid",
  "with-postgres",
] }
fusionsql-core = { workspace = true, features = ["with-uuid"] }
sqlx = { workspace = true, optional = true }
sea-query = { workspace = true, optional = true }
clap = { workspace = true, optional = true, features = ["derive", "string"] }
typed-builder = { workspace = true }
garde = { workspace = true }
duration-str = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
utoipa = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# WASM dependencies
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
js-sys = { workspace = true }
gloo-timers = { workspace = true, features = ["futures"] }
web-sys = { workspace = true }
tsify = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
